Update title in Jupyter notebook header

--- a/Multimodal_Multilingual_RAG_System.ipynb.ipynb
+++ b/Multimodal_Multilingual_RAG_System.ipynb.ipynb
@@ -6,7 +6,7 @@
     "id": "m9pOsmwla28w"
    },
    "source": [
-    "# 📘 StockGro GenAI Assignment — Multimodal RAG System  \n",
+    "# 📘 # Multimodal & Multilingual RAG System  \n",
     "### **Author: Lakhan Bukkawar**  \n",
     "### **Role: Data Science (Gen AI)**  \n",
     "\n",
